--- a/index.css
+++ b/index.css
@@ -20,12 +20,19 @@ body {
     height: 100vh;
 }
 
-main{
+main {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+}
+
+.header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .header {
@@ -56,4 +63,75 @@ main{
     color: var(--black);
     mix-blend-mode: normal;
     opacity: 0.5;
+    max-width: 540px;
+    margin-bottom: 64px;
+}
+
+.bottom-container{
+    display: flex;
+    width: 1110px;
+    height: 530px;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card-container {
+    width: 350px;
+    height: 247px;
+    box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
+    padding: 32px 32px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    border-radius: 8px;
+}
+
+
+.card-header {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--black);
+
+}
+
+.card-subtitle {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 23px;
+    letter-spacing: 0.0902778px;
+    color: var(--black);
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    margin-bottom: 40px;
+}
+
+.card-img{
+    width: 64px;
+    height: 64px;
+    justify-self: flex-end;
+    align-self: flex-end;
+}
+
+.middle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.cyan{
+    border-top: 4px solid var(--cyan);
+}
+.red{
+    border-top: 4px solid var(--red);
+}
+.blue{
+    border-top: 4px solid var(--blue);
+}
+.yellow{
+    border-top: 4px solid var(--yellow);
 }
